# homelab

./: .ansible-lint-ignore  .checkov.yml  .editorconfig  .envrc  .gitignore  .gitleaksignore  .markdown-link-check.json  .mega-linter.yml  .prettierignore  .terraform-docs.yml  .terraform.lock.hcl  .tflint.hcl  Earthfile  README.md  default.nix  deploy.nu  flake.nix  format.nu  hosts.yaml  main.tf  pyproject.toml  shell.nix  test.runnerDeployment.yaml
.config/: ansible-lint.yml
.github/: CODEOWNERS  actionlint.yaml  dependabot.yaml  renovate.json
.github/workflows/: ci.yaml  deps.yaml  nightly.yaml  pr.yaml  push.yaml  tag.yaml
.trunk/: trunk.yaml
ansible/: all.ansible-playbook.yaml  ansible.cfg  hosts.yaml  requirements.yml  upgrade.ansible-playbook.yaml
digitalocean/terraform/: .terraform.lock.hcl  README.md  data.tf  k0s.cloud-init.yaml  k0s.tf  main.tf  terraform.tf
docker/homepage/: compose.yaml
docker/satisfactory/: compose.yaml
docker/tfc-agent/: compose.yaml
docker/tsdproxy/: compose.yaml
docker/uptime-kuma/: compose.yaml
docker/whatsupdocker/: compose.yaml
homelab/k0sctl/: deploy.nu  k0sctl.yaml
homelab/terraform/: .terraform.lock.hcl  data.tf  deploy.nu  modules.tf  taint.nu  terraform.tf  variables.tf
k0sctl/digitalocean/: k0sctl.yaml
k0sctl/vultr/: k0sctl.yaml  kubeconfig.yaml  manifest.yaml  wordpress.yaml
k8s/static/: actions-runner-controller.runnerDeployment.yaml  cert-manager.clusterissuer.yaml  nginx-test.deployment.yaml
kops/digitalocean/: .envrc  .terraform.lock.hcl  cluster.kops.yaml  general.ig.kops.yaml  gitpod-ide.ig.kops.yaml  gitpod-meta.ig.kops.yaml  gitpod-workspace.ig.kops.yaml  gitpod.config-patch.yaml  main.tf  (+2 more)
(+353 files in other folders)
