[tool.poetry]
name = "deploy"
version = "0.0.0"
description = ""
authors = ["Vyas Nellutla <me@vyas-n.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.group.dev.dependencies]
ansible-core = "2.18.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
