[tool.poetry]
name = "deploy"
version = "0.0.0"
description = ""
authors = ["Vyas Nellutla <me@vyas-n.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.group.dev.dependencies]
ansible-core = "2.18.1"
# Using this workaround for ansible-lint using poetry
# ref: https://github.com/ansible/ansible-lint/issues/2730#issuecomment-1330406601
ansible-lint = { version = "25.5.0", markers = "platform_system != 'Windows'" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
